--- a/index.html
+++ b/index.html
@@ -277,13 +277,13 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Yhteystiedot</h2>
+          <p>Jos kiinnostuit, ota rohkeasti yhteyttä!</p>
         </div>
 
-        <div class="row" data-aos="fade-in">
+        <div class="column" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
+          <div class="d-flex align-items-stretch">
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
@@ -307,7 +307,7 @@
             </div>
 
           </div>
-
+          <!--
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
@@ -340,6 +340,7 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div>
+        -->
 
         </div>
 
