--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Emilia Setälä</h1>
-      <p>Hei, olen <span class="typed" data-typed-items="VAMK:in tradenomiopiskelija, Lähihoitaja vuodesta 2018"></span></p>
+      <p>Hei, olen <span class="typed" data-typed-items="tradenomiopiskelija, Lähihoitaja"></span></p>
     </div>
   </section><!-- End Hero -->
 
