--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
       <img src="assets/img/mina.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Emilia Setälä</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.instagram.com/emiliasetala/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/emiliasetala/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -303,7 +302,7 @@
                 <p>+358 40 0286036</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7218.804756240532!2d21.580964444957385!3d63.10694178017595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467d60f9d4068eb5%3A0x260146d7261dd401!2sPalosaari%2C%2065200%20Vaasa!5e0!3m2!1sfi!2sfi!4v1613029123789!5m2!1sfi!2sfi" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7218.804756240532!2d21.580964444957385!3d63.10694178017595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467d60f9d4068eb5%3A0x260146d7261dd401!2sPalosaari%2C%2065200%20Vaasa!5e0!3m2!1sfi!2sfi!4v1613029123789!5m2!1sfi!2sfi" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>"
             </div>
 
           </div>
