--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Emilia Setälä</h1>
-      <p>Hei, olen <span class="typed" data-typed-items="tradenomiopiskelija, Lähihoitaja"></span></p>
+      <h1>Emilia  Setälä</h1>
+      <p>Olen <span class="typed" data-typed-items="tradenomiopiskelija, Lähihoitaja"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -132,6 +132,7 @@
         <div class="row skills-content">
 
           <div class="col-lg-6" data-aos="fade-up">
+            <h3>Ohjelmat</h3>
 
             <div class="progress">
               <span class="skill">Kirjanpito, Visma Nova <i class="val">75%</i></span>
@@ -148,36 +149,42 @@
             </div>
 
             <div class="progress">
-              <span class="skill">HTML, CSS <i class="val">75%</i></span>
+              <span class="skill">HTML, CSS, Bootstrap <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
+            <h3>Harrastukset</h3>
+            <ul>
+              <li><i class="skill"></i> <strong>Salibandy</strong></li>
+              <p></p>
+              <li><i class="skill"></i> <strong>Kuntosali</strong></li>
+              <p></p>
+              <li><i class="skill"></i> <strong>Käsityöt</strong></li>
+            </ul>
+            <!--
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">Salibandy<i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">Kuntosali<i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">Käsityöt<i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+          -->
 
           </div>
 
@@ -302,7 +309,7 @@
                 <p>+358 40 0286036</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7218.804756240532!2d21.580964444957385!3d63.10694178017595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467d60f9d4068eb5%3A0x260146d7261dd401!2sPalosaari%2C%2065200%20Vaasa!5e0!3m2!1sfi!2sfi!4v1613029123789!5m2!1sfi!2sfi" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>"
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7218.804756240532!2d21.580964444957385!3d63.10694178017595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467d60f9d4068eb5%3A0x260146d7261dd401!2sPalosaari%2C%2065200%20Vaasa!5e0!3m2!1sfi!2sfi!4v1613029123789!5m2!1sfi!2sfi" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
