--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="section-title">
           <h2>Esittely</h2>
-          <p>Olen ensimmäisen vuoden tradenomiopiskelija. Alan vaihdos on saanut aikaan vahvan palon oppia uutta.Ensimmäisestä ammatistani sain loistavan pohjan asiakaspalvelutyölle sekä erilaisten ihmisten kanssa toimimiseen.</p>
+          <p>Olen toisen vuoden tradenomiopiskelija. Alan vaihdos on saanut aikaan vahvan palon oppia uutta.Ensimmäisestä ammatistani sain loistavan pohjan asiakaspalvelutyölle sekä erilaisten ihmisten kanssa toimimiseen.</p>
         </div>
 
         <div class="row">
@@ -106,7 +106,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Ikä:</strong> 22</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Ikä:</strong> 23</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Sähköposti:</strong> emilia.set@gmail.com</li>
                 </ul>
               </div>
