--- a/index.html
+++ b/index.html
@@ -135,21 +135,21 @@
             <h3>Ohjelmat</h3>
 
             <div class="progress">
-              <span class="skill">Kirjanpito, Visma Nova <i class="val">75%</i></span>
+              <span class="skill">Kirjanpito, Visma Nova, Lemonsoft <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Excel <i class="val">90%</i></span>
+              <span class="skill">Excel</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">HTML, CSS, Bootstrap <i class="val">50%</i></span>
+              <span class="skill">HTML, CSS <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -206,23 +206,15 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Suosittelijat</h3>
             <div class="resume-item pb-0">
-              <h4>Terhi Kaunisto -"Alavuden kaupungin varhaiskasvatus"</h4>
-              <p><em>Päiväkodin johtaja</em></p>
+              <h4>VALTTERI HARTIKAINEN"</h4>
+              <p><em></em></p>
               <ul>
-                <li>terhi.kaunisto@alavus.fi</li>
-                <li>+358 401285070</li>
+                <li>valtteri.hartikainen@icloud.com</li>
+                <li>+358 50 571 3666</li>
   
               </ul>
             </div>
-            <div class="resume-item pb-0">
-              <h4>Sanna Slip -"Pilke päiväkodit"</h4>
-              <p><em>Päiväkodin johtaja</em></p>
-              <ul>
-                <li>sanna.slip@pilkepaivakodit.fi</li>
-                <li>+358 404566503</li>
-  
-              </ul>
-            </div>
+            
 
             <h3 class="resume-title">Koulutus</h3>
             <div class="resume-item">
@@ -239,6 +231,12 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Työkokemus</h3>
+            <div class="resume-item">
+              <h4>Valtteri Hartikainen</h4>
+              <h5>Kesä 2021</h5>
+              <p><em>Lastenhoitaja, Nurmijärvi</em></p>
+              
+            </div>
             <div class="resume-item">
               <h4>Sorcolor Oy</h4>
               <h5>Kesä 2020</h5>
