--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <div class="section-title">
           <h2>Taidot</h2>
-          <p></p>
+          <p>Pääaineenani tradenomin opinnoissa on taloushallinto. Vahvuuteni ja intohimoni on palkkahallinto ja kirjanpito. Myös muut tradenomin perustehtävät luonnistuu, kuten markkinointi. </p>
         </div>
 
         <div class="row skills-content">
@@ -135,7 +135,7 @@
             <h3>Ohjelmat</h3>
 
             <div class="progress">
-              <span class="skill">Kirjanpito, Visma Nova, Lemonsoft <i class="val">75%</i></span>
+              <span class="skill">Visma Nova (ERP) </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -143,11 +143,14 @@
 
             <div class="progress">
               <span class="skill">Excel</span>
+               <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
               
             </div>
 
             <div class="progress">
-              <span class="skill">HTML, CSS <i class="val">50%</i></span>
+              <span class="skill"> Lemonsoft (ERP) </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
