--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Suosittelijat</h3>
             <div class="resume-item pb-0">
-              <h4>VALTTERI HARTIKAINEN"</h4>
+              <h4>VALTTERI HARTIKAINEN</h4>
               <p><em></em></p>
               <ul>
                 <li>valtteri.hartikainen@icloud.com</li>
