--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <div class="section-title">
           <h2>Taidot</h2>
-          <p>Pääaineenani tradenomin opinnoissa on taloushallinto. Vahvuuteni ja intohimoni on palkkahallinto ja kirjanpito. Myös muut tradenomin perustehtävät luonnistuu, kuten markkinointi. </p>
+          <p>Pääaineenani tradenomin opinnoissa on taloushallinto. Vahvuuteni ja intohimoni ovat palkkahallinnossa ja kirjanpidossa mutta myös muut tradenomin perustehtävät luonnistuu, kuten esimerkiksi markkinointi. Markinnoinnissa minua kiinnostaa erityisesti digimarkkinointi</p>
         </div>
 
         <div class="row skills-content">
