--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Työkokemus</h3>
+            </div>
             <div class="resume-item">
               <h4>Mico Botnia Oy</h4>
               <h5>Kesä/syksy 2022</h5>
