--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
               <h4>Mico Botnia Oy</h4>
               <h5>Kesä/syksy 2022</h5>
               <p><em>Palkanlaskija, Vaasa</em></p>
+            </div>
               
             <div class="resume-item">
               <h4>Valtteri Hartikainen</h4>
