--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         </div>
 
         <div class="row">
-          
+        <div class="col-lg-6" data-aos="fade-up"> 
             
 
             <h3 class="resume-title">Koulutus</h3>
