--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3>Harrastukset</h3>
             <ul>
-              <li><i class="skill"></i> <strong>Salibandy</strong></li>
+              <li><i class="skill"></i> <strong>Padel</strong></li>
               <p></p>
               <li><i class="skill"></i> <strong>Kuntosali</strong></li>
               <p></p>
@@ -230,15 +230,15 @@
                 <h3 class="resume-title">Suosittelijat</h3>
                 <div class="resume-item">
                 <h4>Valtteri Hartikainen</h4>
-                <h5>0505713666</h5><br>
-                <h6>valtteri.hartikainen@icloud.fi</h6>
+                <p>0505713666</p>
+                <p>valtteri.hartikainen@icloud.fi</p>
                 <p><em>Kaupallinen johtaja, Bark Oy</em></p>
                 </div>
             
                 <div class="resume-item">
                 <h4>Pauliina Karlsson</h4>
-                <h5>0403544134</h5><br>
-                <h6>pauliina.karlsson@micobotnia.fi</h6>
+                <p>0403544134</p>
+                <p>pauliina.karlsson@micobotnia.fi</p>
                 <p><em>Palvelupäällikkö, Mico Botnia Oy Ab</em></p>
                 </div>
             </div>
